[package]
name = "keepercore"
version = "0.1.0"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
botan = "0.6.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.46"

[lib]
name = "keeper"
crate-type = ["cdylib"]